Added the explanation of removing outliers

--- a/Analyze Large Datasets with Sampling Using Pandas.ipynb
+++ b/Analyze Large Datasets with Sampling Using Pandas.ipynb
@@ -49,7 +49,9 @@
     "\n",
     "The get_full_and_sample_col_distributions function reads in a csv file in chunks and assigns the smallest float size. For each chunk, it samples a portion of the data specified by the frac parameter (10% for the distributions shows below), and concatenates it to the greater random_sample dataframe. It also calculates the rounded off value counts (rounded to 4 decimal places) for each chunk and concatenates it to the greater full_data dataframe. The function returns the full_data and random_sample Pandas series.\n",
     "\n",
-    "The plot_full_and_sample_distributions function plots histograms for both the random sample and full dataset. It also returns the result of the histogram calculations for both the random sample and full dataset."
+    "The plot_full_and_sample_distributions function plots histograms for both the random sample and full dataset. It also returns the result of the histogram calculations for both the random sample and full dataset.\n",
+    "\n",
+    "Note: At some points, I use full_data[full_data>1] when calling plot_full_and_sample_distributions. It's to remove any 1 off values from the full dataset that zoom out the distribution."
    ]
   },
   {
