--- a/Analyze Large Datasets with Sampling Using Pandas.ipynb
+++ b/Analyze Large Datasets with Sampling Using Pandas.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "The idea behind this notebook is to show that using a fraction of the data (in this case 10%, possibly less could be used) suffices in being able to understand the 5.5M+ rows of data and that 1 doesn't have to go beyond Pandas to accomplish this task.\n",
     "\n",
-    "To show that a fraction of the data is representative of the greater dataset, we look at the distribution of the. You'll realize that the distibution at 10% is essentially identical to that of 100%.\n",
+    "To show that a fraction of the data is representative of the greater dataset, we look at the distribution of the sample. You'll realize that the distibution at 10% is essentially identical to that of 100%.\n",
     "\n",
-    "Note: the following columns, because they're either ID columns, date columns or categorical columns, are not accounted for during this exercise. Because of that reason do NOT try to look at the distribution of the following columns, it will break the code:\n",
+    "Note: the following columns, because they're either ID columns, date columns or categorical columns, are not accounted for during this exercise. Because of that reason do NOT try to look at the distribution of the following columns, it WILL break the code:\n",
     "+ ID\n",
     "+ S_2\n",
     "+ B_30\n",
@@ -32,22 +32,21 @@
     "\n",
     "The following practices are used in this notebook to iterate through the data and choose a random sample:\n",
     "+ Pandas chunksize is used to iterate through the dataset.\n",
-    "+ The function to iterate only chooses 1 column at a time.\n",
-    "+ The smallest possible float size is used importing the data (mainly float16).\n",
-    "+ The values of the floats are rounded to 4 decimal places, which ensures that there aren't more the 10k possible distinct values to hold\n",
+    "+ The function to iterate only allows 1 column at a time.\n",
+    "+ The smallest possible float size is used when importing the data (mainly float16).\n",
+    "+ The values of the floats are rounded to 4 decimal places, which ensures that there aren't more than 10k possible distinct values to hold\n",
     "\n",
-    "Lastly, BEFORE going over the code, it's important to realize that this is NOT production code. It is not tested and it WILL break if provided the wrong values. The code in this notebook is for demonstration purposes only.\n",
+    "Lastly, BEFORE going over the code, it's important to realize that this is NOT production code. It is NOT tested and it WILL break if provided the wrong values. The code in this notebook is for demonstration purposes ONLY.\n",
     "\n",
     "## The Code\n",
     "\n",
-    "For the purposes of this I had to create a custom histogram plot for the larger dataset (I still use matplotlib's histogram for the sample dataset). The histogram_from_freq function is a function that creates a histogram plot from a Pandas value_counts object. The bins parameter specifies the number of bins in the histogram, and the width parameter specifies the width of the bars in the plot.\n",
+    "For the purposes of this demonstration I had to create a custom histogram plot for the larger dataset (I still use matplotlib's histogram for the sample dataset). The histogram_from_freq function is a function that creates a histogram plot from a Pandas value_counts object. The bins parameter specifies the number of bins in the histogram, and the width parameter specifies the width of the bars in the plot.\n",
     "\n",
-    "The get_bins function returns an array of bin intervals using np.linspace. The histogram_from_freq function iterates over these intervals and uses them to calculate the frequencies for each bin. It then plots the histogram using plt.bar and returns the frequencies and the bin intervals.\n",
+    "The get_bins function returns an array of bin intervals using NumPy's linspace. The histogram_from_freq function iterates over these intervals and uses them to calculate the frequencies for each bin. It then plots the histogram using Matplotlib's bar and returns the frequencies and the bin intervals.\n",
     "\n",
-    "Note: Because I made my own historgram function, you'll see that I change the width parameter below to make sure that bar widths are the same as those of matplotlib's.\n",
+    "Note: Because I made my own historgram function, you'll see that I change the width parameter below to make sure that bar widths are the same as those of Matplotlib's.\n",
     "\n",
-    "\n",
-    "The get_full_and_sample_col_distributions function reads in a csv file in chunks and assigns the smallest float size. For each chunk, it samples a portion of the data specified by the frac parameter (10% for the distributions shows below), and concatenates it to the greater random_sample dataframe. It also calculates the rounded off value counts (rounded to 4 decimal places) for each chunk and concatenates it to the greater full_data dataframe. The function returns the full_data and random_sample Pandas series.\n",
+    "The get_full_and_sample_col_distributions function reads in a csv file in chunks and assigns the smallest float size. For each chunk, it samples a portion of the data specified by the frac parameter (10% for the distributions shown below), and concatenates it to the greater random_sample dataframe. It also calculates the rounded off value counts (rounded to 4 decimal places) for each chunk and concatenates it to the greater full_data dataframe. The function returns the full_data and random_sample Pandas series.\n",
     "\n",
     "The plot_full_and_sample_distributions function plots histograms for both the random sample and full dataset. It also returns the result of the histogram calculations for both the random sample and full dataset.\n",
     "\n",
